some changes done

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 .php-cs-fixer.cache
 tools/php-cs-fixer/vendor/clue/ndjson-react/README.md
 tools/php-cs-fixer/vendor/clue/ndjson-react/LICENSE
+jay/
