--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 tools/php-cs-fixer/vendor/clue/ndjson-react/README.md
 tools/php-cs-fixer/vendor/clue/ndjson-react/LICENSE
 jay/
+RDF_Projects/
+RDF_UI/
